<resources>

    <string name="app_name">DiabetIF</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Calcul IF</string>
    <string name="selectionner_periode">Selectionner periode</string>
    <string name="glucide_actuelle">glucide  actuelle</string>
    <string name="glycemie_actuelle">Glycemie actuelle</string>
    <string name="gramme">g</string>
    <string name="mg_dl">mg/dL</string>
    <string name="ratio_matin">Ratio matin</string>
    <string name="_id_edittext1">\@+id/editText1</string>
    <string name="_a">à</string>
    <string name="objectife_glecymeque">objectife Glecymeque</string>
    <string name="sencibilit_apr_s_midi">sencibilité Aprés-midi</string>
    <string name="sencibilit_matin">sencibilité Matin</string>
    <string name="sencibilit_resucrage">sencibilité resucrage</string>
    <string name="ratio_soir">Ratio soir</string>
    <string name="ratio_midi">Ratio Midi</string>
    <string name="save">Save</string>

    <string-array name="period_array">
        <item>Matin</item>
        <item>Midi</item>
        <item>Soir</item>
    </string-array>

    <string name="param_trer_votre_application">Paramétrer votre application</string>
    <string name="insuline_pour_manger">Insuline pour manger</string>
    <string name="correction">Correction</string>
    <string name="resucrage">Resucrage</string>
    <string name="nombre_d_apos_unit_d_apos_insuline">Nombre d\'unité d\'insuline</string>
    <string name="selectionner_operation">Selectionner Operation</string>
    <string name="insuline">Insuline</string>

</resources>